[v8r5p6]
use DIRAC v6r17p8

* propagate back the modifications from level to master for client release
* improve the bookkeeping integration tests
* do not use the file name
* some minor fixes
* use bulk queries
* do not take into account the jobid and stepid
* fix unit test
* JobStart and JobEnd can not hardcoded
* reduce the number of calls

[v8r5p5]
use DIRAC v6r17p7
* Change order of root and xroot in case both are in protocol: 'xroot' should be before 'root'
* try and remove empty directories with the shifter proxy first
* Temporal addition to template workflows with single Gauss step in production
* Change external version to v6r5p4 and get the tar with wget
* fix printout
* use getReplicasForJobs()

[v8r5p4]
use DIRAC v6r17p6

* hacking for testing LbLoginDev.sh
* use getReplicasForJobs rather than getReplicas(forJobs=TTrue)
* fix the fact that ancestor RAW files are returning only the basename
* add option --ForJobs in dirac-dms-lfn-replicas to get only replicas usable for jobs
* fix exception when runDB not available

[v8r5p3]
use DIRAC v6r17p5

* just pylint
* docs update
* fixed a test

[v8r5p2]
use DIRAC v6r17p3

* runDict was redefined
* Update README.md
* do not convert to number
* tuple as exceptions
* sort files by RunNumber before adding them to transformation
* get CERN site name after CS init
* implement new method which returns the available db tags. For request: LHCBDIRAC-273
* use the same name convention
* add the job metadata: LHCBDIRAC-557
* add DiracJobId to the getJobInformation: LHCBDIRAC-558
* hlt2tck is implemented: LHCBDIRAC-544
* Add more bookkeeping integration tests: LHCBDIRAC-453
* Added missing group in the notification link
* Disable watchdog in case of BOINC sites.
* even more info on runs
* add runs <= lastRun to the list of runs to process
* add nb of tasks to run info
* removed old stuff
* DIRAC.JobDebugger.ch -> DIRAC.JobDebugger.cern
* CLOUD.CERN.ch -> CLOUD.CERN.cern
* LCG.CERN.ch -> LCG.CERN.cern
* allow wrong case