@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v8r5p7
+  {
+    Modules = LHCbDIRAC:v8r5p7, LHCbWebDIRAC:v4r2p5
+    Depends = DIRAC:v6r17p9
+    LcgVer = 2016-11-03
+  }
+
   v8r5p6
   {
     Modules = LHCbDIRAC:v8r5p6, LHCbWebDIRAC:v4r2p5
