@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r5p6",
+  "version": "v8r5p7",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r17p8",
+      [ "Dirac", "v6r17p9",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v11r1",
